--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script type ="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         
     </head>
-    <body background="milky-way.jpg">
+    <body background="./images/milky-way.jpg">
         <header>
             <div>
                 <h1>Space Crystals</h1> 
@@ -20,10 +20,10 @@
         <p id="result"></p>
 
         <div class="crystals">
-            <img src="../Asset/diamond.jpg">
-            <img src="../Asset/emerald.jpg">
-            <img src="../Asset/ruby.jpg">
-            <img src="../Asset/sapphire.png">
+            <img src="./images/diamond.jpg">
+            <img src="./images/emerald.jpg">
+            <img src="./images/ruby.jpg">
+            <img src="./images/sapphire.png">
         </div>
                
         <p id="previous"></p>
