--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Crystal Collector Game</title>
-        <link rel="stylesheet" type="text/css" href="../Asset/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="../Asset/css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
         <script type ="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         
     </head>
