--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p id="lose">Losses</p>
             
        
-        <script type="text/javascript" src="../Asset/javascipt/game.js"></script>
+        <script type="text/javascript" src="./javascipt/game.js"></script>
         <footer>
             <div>
                 Copyright 2019 Julian K Hicks 
